Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-2202

Error symbol instead of warning symbol when parsing compile output

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • Qt Creator 2.1.0
    • Qt Creator 2.0.1
    • All Other Issues
    • None
    • 7b7a974ee8ad1d95520fb79d4c73b0dc0da7ab75

    Description

      When the following compile messages occur, you see an error instead of a warning in the Build-Problem tab

      gcc -c -pipe -g -fPIC -D_REENTRANT -Wall -W -D_x86_ -DUSE_LOGGER -DLOG4CXX_STATIC -D_USE_MATH_DEFINES -Dmyuser -Dlint -DQT_SCRIPT_LIB -DQT_SCRIPTTOOLS_LIB -DQT_SQL_LIB -DQT_XML_LIB -DQT_OPENGL_LIB -DQT_GUI_LIB -DQT_NETWORK_LIB -DQT_CORE_LIB -DQT_SHARED -I/company/myprog/local/Linux/2.6.31-desktop/qt-all-commercial-src-4.5.3-2010.01.19/mkspecs/linux-g++ -I../../../Projects/lib/XmlUg -I/usr/local/myprog/qt-all-commercial-src-4.5.3-2010.01.19/include/QtAssistantClient -I/company/myprog/local/Linux/2.6.31-desktop/qt-all-commercial-src-4.5.3-2010.01.19/include/QtAssistant -I/company/myprog/local/Linux/2.6.31-desktop/qt-all-commercial-src-4.5.3-2010.01.19/include/QtUiTools -I/company/myprog/local/Linux/2.6.31-desktop/qt-all-commercial-src-4.5.3-2010.01.19/include/QtCore -I/company/myprog/local/Linux/2.6.31-desktop/qt-all-commercial-src-4.5.3-2010.01.19/include/QtNetwork -I/company/myprog/local/Linux/2.6.31-desktop/qt-all-commercial-src-4.5.3-2010.01.19/include/QtGui -I/company/myprog/local/Linux/2.6.31-desktop/qt-all-commercial-src-4.5.3-2010.01.19/include/QtOpenGL -I/company/myprog/local/Linux/2.6.31-desktop/qt-all-commercial-src-4.5.3-2010.01.19/include/QtXml -I/company/myprog/local/Linux/2.6.31-desktop/qt-all-commercial-src-4.5.3-2010.01.19/include/QtSql -I/company/myprog/local/Linux/2.6.31-desktop/qt-all-commercial-src-4.5.3-2010.01.19/include/QtScriptTools -I/company/myprog/local/Linux/2.6.31-desktop/qt-all-commercial-src-4.5.3-2010.01.19/include/QtScript -I/company/myprog/local/Linux/2.6.31-desktop/qt-all-commercial-src-4.5.3-2010.01.19/include -I../../../Projects/lib/XmlUg -I../../lib -I../../../src -I../../../src/CATL/include -I/company/myprog/local/Linux/2.6.31-desktop/include -I../../../src/Include -I/company/myprog/local/Linux/2.6.31-desktop/qt-all-commercial-src-4.5.3-2010.01.19/include -I/usr/local/myprog/oracle/rdbms/public -I/company/myprog/local/Linux/Meschach/1.2b/Linux_2.6.31-desktop -I/company/thishost/u/myprog/myuser/myprog/myprogSuite-build-desktop/myprogSuite-build-desktop/lib -I/company/myprog/local/Linux/2.6.31-desktop/qicstable-2.4.4-unix-source-commercial/include -I/company/myprog/local/Linux/2.6.31-desktop/qicstable-2.4.4-unix-source-commercial/addons -I/company/myprog/local/Linux/2.6.31-desktop/qicstable-2.4.4-unix-source-commercial/addons/printing -I/usr/local/myprog/qwt/src -I/usr/X11R6/include -I. -I/company/myprog/local/Linux/2.6.31-desktop/apache-log4cxx-0.10.0/include -I. -o targetdelete.o ../../../src/XmlUg/targetdelete.c

      ../../../src/XmlUg/targetdelete.c: In function 'delete_target':

      ../../../src/XmlUg/targetdelete.c:10: warning: unused parameter 'fp'

      ../../../src/XmlUg/targetdelete.c: At top level:

      ../../../src/Include/myprog/xmlstyle.h:25: warning: 'InteriorPatternString' defined but not used

      ../../../src/Include/myprog/xmlstyle.h:40: warning: 'borderPositionString' defined but not used

      ../../../src/Include/myprog/xmlstyle.h:58: warning: 'borderLineStyleString' defined but not used

      ../../../src/Include/myprog/xmlstyle.h:88: warning: 'alignmentHorizontalString' defined but not used

      ../../../src/Include/myprog/xmlstyle.h:112: warning: 'alignmentVerticalString' defined but not used

      ../../../src/Include/myprog/xmlstyle.h:130: warning: 'NumberFormatString' defined but not used

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              hunger Tobias Hunger
              rneuber1 Ralf Neubersch
              Votes:
              0 Vote for this issue
              Watchers:
              0 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes