Fix output parser misinterpreting "At top level:" messages

* Fix the GCC output parser misinterpreting "At top level" messages
   as Errors instead of a simple message.
 * Add unit test to cover this

Task-number: QTCREATORBUG-2202